# C

./: .gitignore  .gitmodules  CMakeLists.txt  cleaned_mesh.sh
conf/: SZU_demo.json  Suzhou_real.json  YRS.json  bridge.json  huiyuan.json  huiyuan_path_viz.json  ny.json  shanghai.json  suzhou.json  szu.json  test_env.json  uk.json  yingrenshi.json
include/: airsim_control.cpp  airsim_control.h  cgal_tools.cpp  cgal_tools.h  common_util.cpp  common_util.h  intersection_tools.cpp  intersection_tools.h  map_util.cpp  map_util.h  metrics.cpp  metrics.h  model_tools.cpp  model_tools.h  object_detection_tools.cpp  object_detection_tools.h  tqdm.h  viz.h
src/: CMakeLists.txt
src/capture_airsim_photo/: CMakeLists.txt  capture_airsim_photo.cpp
src/city_data/: CMakeLists.txt  SZU.json  YRS.json  city_data.cpp  shenzhen.json  shenzhen_test.json  shenzhen_test_RQ.json
src/generate_data_1216/: CMakeLists.txt  generate_data_1216.cpp
src/merge_obj_example/: CMakeLists.txt  merge_obj_example.cpp
src/process_cad/: CMakeLists.txt  process_cad.cpp
src/ray_tracing/: CMakeLists.txt  ray_tracing.cpp
src/record_airsim_video/: CMakeLists.txt  record_airsim_video.cpp
src/remove_points_inside/: CMakeLists.txt  remove_points_inside.cpp
src/rename_material/: CMakeLists.txt  rename_material.cpp
src/sig20/: CMakeLists.txt
src/sig20/ensure_meter/: CMakeLists.txt  ensure_meter.cpp
src/sig20/evaluate_cost/: CMakeLists.txt  evaluate_cost.cpp
src/sig20/evaluate_trajectory/: CMakeLists.txt  analyze.py  evaluate_trajectory.cpp
src/sig20/generate_trajectory_with_prior/: CMakeLists.txt  convert_trajetory_format.cpp  generate_trajectory_with_prior.cpp
src/sig20/main/: CMakeLists.txt  Next_best_target.h  building.h  main.cpp  trajectory.h  viz.h
src/sig20/test/: CMakeLists.txt  test.cpp
src/sig20/test_function/: CMakeLists.txt  test_function.cpp
src/sig20/test_trajectory_generation/: CMakeLists.txt  test.cpp
src/split_obj_according_to_footprint/: CMakeLists.txt  split_obj_according_to_footprint.cpp
src/split_obj_according_to_objgroup/: CMakeLists.txt  split_obj_according_to_objgroup.cpp
src/split_obj_example/: CMakeLists.txt  split_obj.cpp
src/test_function/: CMakeLists.txt  test_function.cpp
